// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tenant Header Header CITZ background 1`] = `
.c0 {
  background-color: #003366;
  border: none;
  border-bottom: 2px solid;
  grid-area: header;
}

@media (max-width:600px) {
  .c0 {
    padding: 0;
  }
}

<div>
  <header
    class="c0"
  />
</div>
`;

exports[`Tenant Header Header MOTI background 1`] = `
.c0 {
  background-color: #003366;
  border: none;
  border-bottom: 2px solid;
  grid-area: header;
}

@media (max-width:600px) {
  .c0 {
    padding: 0;
  }
}

<div>
  <header
    class="c0"
  />
</div>
`;

exports[`Tenant Header Header black background 1`] = `
.c0 {
  background-color: black;
  border: none;
  border-bottom: 2px solid;
  grid-area: header;
}

@media (max-width:600px) {
  .c0 {
    padding: 0;
  }
}

<div>
  <header
    class="c0"
  />
</div>
`;

exports[`Tenant Header Header default background 1`] = `
.c0 {
  background-color: #003366;
  border: none;
  border-bottom: 2px solid;
  grid-area: header;
}

@media (max-width:600px) {
  .c0 {
    padding: 0;
  }
}

<div>
  <header
    class="c0"
  />
</div>
`;
